Saving to GitHub

--- a/gym/templates/login.html
+++ b/gym/templates/login.html
@@ -10,6 +10,10 @@
 
             <label><b>Admin Name</b></label>
             <input type="password" name="pwd" class="form-control">
+
+            <br>
+
+            <input type="submit" value= "Login" class="form-control btn btn-primary">
         </form>
 </div>
 {% endblock body %}
