--- a/gym/templates/navbar.html
+++ b/gym/templates/navbar.html
@@ -1,5 +1,6 @@
 <html lang="en">
 <head>
+  {% load static %}
   <title>Gym Management</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -7,9 +8,10 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 
-<nav class="navbar navbar-expand-md bg-dark navbar-dark">
+<nav class="navbar navbar-expand-md bg-primary navbar-dark">
   <!-- Brand -->
   <a class="navbar-brand" href="#">Gym Management</a>
 
