--- a/gym/templates/navbar.html
+++ b/gym/templates/navbar.html
@@ -23,8 +23,9 @@
   <!-- Navbar links -->
   <div class="collapse navbar-collapse" id="abc">
     <ul class="navbar-nav">
+      {% if not request.user.is_staff %}
       <li class="nav-item">
-        <a class="nav-link" href="#">Home</a>
+        <a class="nav-link" href="{% url 'login' %}">Home</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="{% url 'about' %}">About</a>
@@ -32,6 +33,39 @@
       <li class="nav-item">
         <a class="nav-link" href="{% url 'contact' %}">Contact</a>
       </li>
+      {% endif %}
+      {% if request.user.is_staff %}
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'home' %}">Home</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">Enquiry</a>
+          <div class="dropdown-menu">
+            <a class="dropdown-item" href="#">Add Enquiry</a>
+            <a class="dropdown-item" href="#">View Enquiry</a>
+          </div>
+      </li>
+
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">Plan</a>
+          <div class="dropdown-menu">
+            <a class="dropdown-item" href="#">Add Plan</a>
+            <a class="dropdown-item" href="#">View Plan</a>
+          </div>
+      </li>
+
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">Equipment</a>
+          <div class="dropdown-menu">
+            <a class="dropdown-item" href="#">Add Equipment</a>
+            <a class="dropdown-item" href="#">View Equipment</a>
+          </div>
+      </li>
+
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+      </li>
+      {% endif %}
     </ul>
   </div>
 </nav>
