--- a/gym/templates/navbar.html
+++ b/gym/templates/navbar.html
@@ -41,8 +41,8 @@
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">Enquiry</a>
           <div class="dropdown-menu">
-            <a class="dropdown-item" href="#">Add Enquiry</a>
-            <a class="dropdown-item" href="#">View Enquiry</a>
+            <a class="dropdown-item" href="{% url 'add_enquiry' %}">Add Enquiry</a>
+            <a class="dropdown-item" href="{% url 'view_enquiry' %}">View Enquiry</a>
           </div>
       </li>
 
