--- a/gym/templates/view_enquiry.html
+++ b/gym/templates/view_enquiry.html
@@ -7,7 +7,7 @@
 
 <div class="container" style="margin-top: 60px">
     <h2 class="text-center text-primary font-weight-bold">View Enquiry</h2>
-    <table>
+    <table class="table table-hover">
         <thead>
             <tr>
                 <th>Name</th>
