--- a/gym/templates/navbar.html
+++ b/gym/templates/navbar.html
@@ -11,13 +11,14 @@
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
   <!-- DataTable cdn start -->
-  <script src="https://code.jquery.com/jquery-3.5.1.js">
-  <script src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js">
-  <script src="https://cdn.datatables.net/buttons/2.0.1/js/dataTables.buttons.min.js">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js">
-  <script src="https://cdn.datatables.net/buttons/2.0.1/js/buttons.html5.min.js">
+  <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+  <script src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>
+  <script src="https://cdn.datatables.net/buttons/2.0.1/js/dataTables.buttons.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
+  <script src="https://cdn.datatables.net/buttons/2.0.1/js/buttons.html5.min.js"></script>
+
   <!-- DataTable cdn end -->
 </head>
 
