Saving to GitHub

--- a/gym/templates/navbar.html
+++ b/gym/templates/navbar.html
@@ -86,8 +86,8 @@
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">Equipment</a>
           <div class="dropdown-menu">
-            <a class="dropdown-item" href="#">Add Equipment</a>
-            <a class="dropdown-item" href="#">View Equipment</a>
+            <a class="dropdown-item" href="{% url 'add_equipment' %}">Add Equipment</a>
+            <a class="dropdown-item" href="{% url 'view_equipment' %}">View Equipment</a>
           </div>
       </li>
 
