Saving to GitHub

--- a/gym/templates/add_equipment.html
+++ b/gym/templates/add_equipment.html
@@ -21,7 +21,7 @@
             <input type="text" name="date" class="form-control" required>
 
             <label><b>Description</b></label>
-            <textare class="form-control" name="description"></textare>
+            <textarea class="form-control" name="description"></textarea>
 
             <br>
 
