--- a/gym/templates/add_enquiry.html
+++ b/gym/templates/add_enquiry.html
@@ -21,8 +21,8 @@
             <input type="text" name="age" class="form-control" required>
 
             <label><b>Gender</b></label>
-            <input type="radio" name="age" value="male"> Male
-            <input type="radio" name="age" value="female"> Female
+            <input type="radio" name="gender" value="male"> Male
+            <input type="radio" name="gender" value="female"> Female
             <br>
 
             <input type="submit" value= "Submit" class="form-control btn btn-primary">
