Saving to GitHub

--- a/gym/templates/add_equipment.html
+++ b/gym/templates/add_equipment.html
@@ -18,7 +18,7 @@
             <input type="text" name="unit" class="form-control" required>
 
             <label><b>Purchase Date</b></label>
-            <input type="text" name="date" class="form-control" required>
+            <input type="date" name="date" class="form-control" required>
 
             <label><b>Description</b></label>
             <textarea class="form-control" name="description"></textarea>
