--- a/gym/templates/contact.html
+++ b/gym/templates/contact.html
@@ -1,5 +1,35 @@
 {% extends 'navbar.html' %}
-
+{% load static %}
 {% block body %}
-    <h1>Contact Us</h1>
+    <style>
+      .mydivstyle:hover{
+          box-shadow:0 0 20px 0 rgba(0, 0, 0, 0.3);
+          transform:translateY(-20px);
+      }
+    </style>
+
+    <div class="container" style="margin-top: 60px">
+    <h2 class="text-center text-primary font-weight-bold">Contact Us</h2>
+    <br><br>
+       <div class="row text-center mt-5">
+          <div class="col-lg-3 col-sm-6 mydivstyle">
+          <h4><i class="fas fa-phone-square"> Contact</i></h4>
+          <p class="mt-3 font-weight-bold"><a class="text-danger" href="tel:+8801686667110"> +8801686667110</a></p>
+          </div>
+
+          <div class="col-lg-3 col-sm-6 mydivstyle">
+          <h4><i class="fas fa-envelope"> Send Mail</i></h4>
+          <p class="mt-3 font-weight-bold"><a class="text-danger" href="mailto:mhmeheddi375@gmail.com"> mhmehedi375@gmail.com</a></p>
+          </div>
+
+          <div class="col-lg-3 col-sm-6 mydivstyle">
+          <h4><i class="fas fa-address-card"> Office Address</i></h4>
+          <p class="mt-3 font-weight-bold"><a class="text-danger" href="https://www.google.com/maps/place/Savar+Union/@23.8773261,90.2263514,13z/data=!3m1!4b1!4m5!3m4!1s0x3755ebd3d6df9569:0x277b3819d4da3e91!8m2!3d23.847848!4d90.2575779"> Rajfulbaria, Savar, Dhaka</a></p>
+          </div>
+
+          <div class="col-lg-3 col-sm-6 mydivstyle">
+          <h4><i class="fas fa-envelope"> Office Hour</i></h4>
+          <p class="mt-3 font-weight-bold"><a class="text-danger"> 9:00 AM to 7:00 PM</a></p>
+          </div>
+       </div>
 {% endblock body %}
