--- a/gym/templates/index.html
+++ b/gym/templates/index.html
@@ -3,6 +3,34 @@
 {% block body %}
 <div class="container" style="margin-top: 60px">
     <h2 class="text-center text-primary font-weight-bold">Admin DashBoard</h2>
+
+    <br><br><br>
+
+    <div class="row">
+       <div class="col-sm-3 text-center mydivstyle">
+          <h2 style="color:blue">{{enquiry1}}</h2>
+          <a href="{% url 'view_enquiry' %}"><h4 style="color:black">Enquires</h4></a>
+          <hr class="rounded">
+       </div>
+
+       <div class="col-sm-3 text-center mydivstyle">
+          <h2 style="color:blue">{{plan1}}</h2>
+          <a href="{% url 'view_plan' %}"><h4 style="color:black">Plans</h4></a>
+          <hr class="rounded">
+       </div>
+
+       <div class="col-sm-3 text-center mydivstyle">
+          <h2 style="color:blue">{{equipment1}}</h2>
+          <a href="{% url 'view_equipment' %}"><h4 style="color:black">Equipments</h4></a>
+          <hr class="rounded">
+       </div>
+
+       <div class="col-sm-3 text-center mydivstyle">
+          <h2 style="color:blue">{{member1}}</h2>
+          <a href="{% url 'view_member' %}"><h4 style="color:black">Members</h4></a>
+          <hr class="rounded">
+       </div>
+    </div>
 </div>
 
 {% endblock body %}
