Saving to GitHub

--- a/gym/templates/about.html
+++ b/gym/templates/about.html
@@ -10,10 +10,26 @@
              </div>
 
              <div class="col-sm-8 text-center mt-5">
-                Hello Mr/Mrs,<br>
-                This is a simple gym management project developed by Mehedi Hasan using Pythom, Django, HTML, CSS, JS and Bootstrap.
+               <h5>Welcome to Mashfan Gym.<br> 
+               One of the leading gym and health service provider in Rajfulbaria, Savar, Dhaka.<br>
+               MASHFAN Gym and Health Club, the pioneers in gym and health services.<br>
+               We provide our members a unique lifestyle with the best possible services and routines to make their lives better.<br>
+               Our gym is equipped with all the necessary instruments with qualified instructors and is fully air-conditioned.<br>
+               Don't wish for it, work for it.<br>
+               Timing for Male:<br>
+               Saturday-Thursday: 7.00am-11.00am & 4.00pm-10.30pm<br>
+               Friday: 4.00pm-10.30pm<br>
+               Timing for Female:<br>
+               Everyday: 11.30am-4.00pm<br></h5>
              </div>
           </div>
+    </div>
+    <br><br><br><br>
+    <div>
+            <div class="col-sm-12 text-center mt-5">
+                Hello Mr/Mrs,<br>
+                This is a sample gym management project developed by Mehedi Hasan using Python, Django, HTML, CSS, JS and Bootstrap.
+             </div>
     </div>
     <footer class="text-center font-weight-bold mt-5">
        <h5>Copyright &copy; 2021, Mehedi Hasan, All Rights Reserved.</h5>
