--- a/gym/templates/add_equipment.html
+++ b/gym/templates/add_equipment.html
@@ -1,5 +1,5 @@
 {% extends 'navbar.html' %}
-
+{% load static %}
 {% block body %}
 
 
@@ -27,6 +27,24 @@
 
             <input type="submit" value= "Submit" class="form-control btn btn-primary">
         </form>
+
+        <div class="row">
+             <div class="col-sm-3 text-center">
+                <img src="{% static 'images/9.jpg' %}" width="300" height="200" class="img-responsive">
+             </div>
+
+             <div class="col-sm-3 text-center">
+                <img src="{% static 'images/4.jpg' %}" width="300" height="200" class="img-responsive">
+             </div>
+
+             <div class="col-sm-3 text-center">
+                <img src="{% static 'images/7.jpg' %}" width="300" height="200" class="img-responsive">
+             </div>
+
+             <div class="col-sm-3 text-center">
+                <img src="{% static 'images/10.jpg' %}" width="250" height="200" class="img-responsive">
+             </div>
+        </div>
 </div>
 
 {% ifequal error "no" %}
