--- a/gym/templates/contact.html
+++ b/gym/templates/contact.html
@@ -32,4 +32,22 @@
           <p class="mt-3 font-weight-bold"><a class="text-danger"> 9:00 AM to 7:00 PM</a></p>
           </div>
        </div>
+       <br><br><br><br>
+       <div class="row">
+             <div class="col-sm-3 text-center">
+                <img src="{% static 'images/about-us.jpg' %}" width="300" height="200" class="img-responsive">
+             </div>
+
+             <div class="col-sm-3 text-center">
+                <img src="{% static 'images/1.jpg' %}" width="300" height="200" class="img-responsive">
+             </div>
+
+             <div class="col-sm-3 text-center">
+                <img src="{% static 'images/2.jpg' %}" width="300" height="200" class="img-responsive">
+             </div>
+
+             <div class="col-sm-3 text-center">
+                <img src="{% static 'images/3.png' %}" width="250" height="200" class="img-responsive">
+             </div>
+        </div>
 {% endblock body %}
