--- a/gym/templates/login.html
+++ b/gym/templates/login.html
@@ -32,14 +32,21 @@
             <input type="submit" value= "Login" class="form-control btn btn-primary">
         </form>
         <div class="row">
-             <div class="col-sm-4 text-center">
-                <img src="{% static 'images/about-us.jpg' %}" width="300" height="200" class="img-responsive">
+             <div class="col-sm-3 text-center">
+                <img src="{% static 'images/1.jpg' %}" width="300" height="200" class="img-responsive">
              </div>
 
-             <div class="col-sm-8 text-center mt-5">
-                Hello Mr/Mrs,<br>
-                This is a simple gym management project developed by Mehedi Hasan using Pythom, Django, HTML, CSS, JS and Bootstrap.
+             <div class="col-sm-3 text-center">
+                <img src="{% static 'images/10.jpg' %}" width="300" height="200" class="img-responsive">
              </div>
-            </div>
+
+             <div class="col-sm-3 text-center">
+                <img src="{% static 'images/2.jpg' %}" width="300" height="200" class="img-responsive">
+             </div>
+
+             <div class="col-sm-3 text-center">
+                <img src="{% static 'images/3.png' %}" width="250" height="200" class="img-responsive">
+             </div>
+        </div>
 </div>
 {% endblock body %}
