--- a/gym/templates/index.html
+++ b/gym/templates/index.html
@@ -1,5 +1,5 @@
 {% extends 'navbar.html' %}
-
+{% load static %}
 {% block body %}
 <div class="container" style="margin-top: 60px">
     <h2 class="text-center text-primary font-weight-bold">Admin DashBoard</h2>
@@ -31,6 +31,23 @@
           <hr class="rounded">
        </div>
     </div>
+    <div class="row">
+             <div class="col-sm-3 text-center">
+                <img src="{% static 'images/about-us.jpg' %}" width="300" height="200" class="img-responsive">
+             </div>
+
+             <div class="col-sm-3 text-center">
+                <img src="{% static 'images/1.jpg' %}" width="300" height="200" class="img-responsive">
+             </div>
+
+             <div class="col-sm-3 text-center">
+                <img src="{% static 'images/2.jpg' %}" width="300" height="200" class="img-responsive">
+             </div>
+
+             <div class="col-sm-3 text-center">
+                <img src="{% static 'images/3.png' %}" width="250" height="200" class="img-responsive">
+             </div>
+        </div>
 </div>
 
 {% endblock body %}
